--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
 }
 
 dependencies {
-//    //noinspection GradleCompatible
-//    implementation 'com.android.support:palette-v7:28.0.0'
+
+    implementation 'com.github.madrapps:pikolo:2.0.2'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
